--- a/index.mdx
+++ b/index.mdx
@@ -7,3 +7,4 @@ import ClearState from '@components/scripts/ClearState.astro';
 
 <Cowsay />
 
+Hey! I'm a PhD student at LSUHSC studying Epidemiology.
